# Scryfall-Archiver

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.yml  init.sql  test-docker-compose.yml
src/: archiver.rs  json_stream.rs  main.rs  types.rs
