[package]
name = "scryfall-archiver"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
chrono = "0.4.39"
cron = "0.15.0"
